[Fix] galleries#index wrap

--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -86,8 +86,25 @@
   }
   .form__btn {
     margin: 0 auto;
-    width: 400px;
   }
 }
 
 // index
+
+.galleries__index {
+  width: 80%;
+  margin: 20px auto 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery__items {
+  margin: 10px 10px 0 0;
+  padding: 15px;
+  background-color: white;
+
+  .gallery__introduce {
+    padding-left: 20px;
+  }
+}
